bank/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: bank-project # Assicurati che il namespace sia corretto
  annotations:
    # Rimosse annotazioni non necessarie o obsolete
    deployment.kubernetes.io/revision: '1' # Aggiorna la revisione se necessario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        monitoring: enabled
      # Rimosse annotazioni non necessarie o obsolete
    spec:
      containers:
        - name: backend
          image: 'mtdunina/backend-app:latest' # Assicurati che questa sia l'immagine aggiornata con le modifiche al codice (variabili d'ambiente, CORS, redirect)
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20

          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always # Usa Always se l'immagine latest cambia spesso
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: worker2 # Forza l'esecuzione su Worker2
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bank-project # Assicurati che il namespace sia corretto e corrisponda al deployment
  annotations:
    # Rimosse annotazioni non necessarie o obsolete
    kubesphere.io/creator: project-regular
  labels:
    app: backend
    monitoring: enabled
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000 # La porta del Service a cui l'Ingress (e potenzialmente il frontend) si connetterà
      targetPort: 5000 # La porta del container
  selector:
    app: backend # Seleziona i pod con questo label
  # clusterIP: 10.233.X.Y # Questo IP viene assegnato automaticamente da Kubernetes, non specificarlo nel YAML
  # clusterIPs:
  #   - 10.233.X.Y
  type: ClusterIP  # Impostato come richiesto per l'utilizzo con Ingress
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
