bank/ingress.yaml
# Ingress per il Frontend (file statici: index.html, logo.png, style.css, dashboard.html, ecc.)
# NON ha l'annotazione di rewrite, quindi non interferisce con i percorsi dei file statici.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress-frontend
  namespace: bank-project
  annotations:
    kubesphere.io/creator: project-regular
spec:
  ingressClassName: kubesphere-router-cluster
  tls:
    - hosts:
        - bank.local
      secretName: https-secret
  rules:
    - host: bank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

---

# Ingress per il Backend (API: /api/login, /api/dashboard, /api/transfer, ecc.)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress-backend
  namespace: bank-project
  annotations:
    kubesphere.io/creator: project-regular
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: kubesphere-router-cluster
  tls:
    - hosts:
        - bank.local
      secretName: https-secret
  rules:
    - host: bank.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
